--- a/features/home/home.html
+++ b/features/home/home.html
@@ -39,6 +39,7 @@
 
 <br>
 <br>
+<span class="input-group-addon" id="basic-addon3">Postęp zadań</span>
 <div class="progress">
     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{ ((home.tasks | filter : {done : true}).length)/(home.tasks.length)*100 }}%">
         <span class="sr-only">70% Complete</span>
